# pico-gba-cart

./: .gitignore  CMakeLists.txt  gba-cart.pio  main.cpp  test-rom.h
gba/: CMakeLists.txt  main.c  rom.gba
lib/: CMakeLists.txt  gba-cart.pio  gbacart.cpp  gbacart.h
